Update bazel-6.3.2 (#33)
* Support arm64

Signed-off-by: thinker0 <thinker0@gmail.com>

* Fix value parser of HealthManager

Signed-off-by: thinker0 <thinker0@gmail.com>

* Fix workspace of Bazel

Signed-off-by: thinker0 <thinker0@gmail.com>

* Fix dependency of POM

Signed-off-by: thinker0 <thinker0@gmail.com>

* Update PyYAML for Build

Signed-off-by: thinker0 <thinker0@gmail.com>

* Fix bazel for Build

Signed-off-by: thinker0 <thinker0@gmail.com>

* Fix parser error of HealthManager

Signed-off-by: thinker0 <thinker0@gmail.com>

* Update bazel

Signed-off-by: thinker0 <thinker0@gmail.com>

---------

Signed-off-by: thinker0 <thinker0@gmail.com>